[project]
name = "rag-chatbot-demo"
version = "0.1.0"
description = "RAG chatbot demo with LangChain and Chroma"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "dotenv>=0.9.9",
    "fastapi",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-openai",
    "pypdf",
    "python-dotenv",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]
